--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "web3lagos-dapp",
+  "homepage": ".",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chainsafe/web3-plugin-chainlink": "^1.0.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "web3": "^4.11.1"
   },
   "scripts": {
     "start": "react-scripts start",
